add auth interceptor and unit test