@@ -53,6 +53,10 @@ android {
         }
     }
 }
+tasks.withType<Test> {
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage")
+}
+
 
 dependencies {
 
@@ -130,5 +134,36 @@ dependencies {
 
     implementation(libs.androidx.paging.compose)
     implementation (libs.androidx.paging.runtime.ktx)
+
+    // for my test
+    testImplementation(libs.mockito.core)
+    testImplementation(libs.mockito.kotlin)
+    testImplementation(libs.mockito.inline)
+
+    val mockkVersion = "1.13.13"
+    testImplementation("io.mockk:mockk:${mockkVersion}")
+    testImplementation(libs.robolectric)
+
+    // JUnit 5
+    testImplementation(libs.junit.jupiter.api)
+    testRuntimeOnly(libs.junit.jupiter.engine)
+    // Jika Anda menggunakan Paging
+    testImplementation (libs.androidx.paging.common.ktx)
+
+
+    testImplementation(libs.androidx.core.testing)
+    testImplementation (libs.turbine)
+
+
+    testImplementation(libs.kotlinx.coroutines.test)
+    testImplementation (libs.assertj.core) // Pastikan untuk menggunakan versi terbaru
+
+
+//    testImplementation(libs.hilt.android.testing)
+//    kspTest(libs.hilt.android.compiler)
+//
+//    androidTestImplementation(libs.hilt.android.testing)
+//    kspAndroidTest(libs.hilt.android.compiler)
+
 
 }
